--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                </nav> 
            </div>
            
-           <div class="blue-grey darken-3">
+           <div class="blue-grey darken">
                <div class="conteudo container white-text">
                    <div>
                        <h4>sobre</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime incidunt necessitatibus aperiam culpa quaerat, itaque recusandae nesciunt fugit. Accusamus nobis omnis similique, doloremque harum voluptates. Veritatis doloribus aspernatur, perspiciatis vel?
